[gd_scene load_steps=9 format=3 uid="uid://dckhjaiy2583c"]

[ext_resource type="Texture2D" uid="uid://c36p4fg1d7bly" path="res://Imagenes/intro1.png" id="1_5n4p3"]
[ext_resource type="Script" path="res://Scripts/animacionintro.gd" id="1_si4ho"]
[ext_resource type="Texture2D" uid="uid://bt4fmyyaw648g" path="res://Imagenes/intro2.png" id="2_pjhl5"]
[ext_resource type="FontFile" uid="uid://bvh0dwr54pe5b" path="res://Imagenes/papyrus_freefontdownload_org/papyrus.ttf" id="3_mojgm"]
[ext_resource type="Texture2D" uid="uid://rny2elyb4iv0" path="res://Imagenes/intro3.png" id="4_ak5dc"]
[ext_resource type="Texture2D" uid="uid://bdw0jcysthjev" path="res://Imagenes/intro4.png" id="5_io7a5"]
[ext_resource type="Texture2D" uid="uid://ch7l8vd2rqcqk" path="res://Imagenes/intro5.png" id="6_7rieg"]
[ext_resource type="AudioStream" uid="uid://dwwphjla832j1" path="res://Audios/intro_song.WAV" id="8_hwp1a"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -175.0
offset_right = 31.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_si4ho")
textos = Array[String](["Hace mucho, dos razas gobernaban en la tierra,;HUMANOS y MONSTRUOS", "Un día, la guerra empezó entre las dos razas", "Después de una dura y larga batalla ;Los humanos salieron victoriosos", "Encerraron a los monstruos en el subsuelo.; Mt.Ebott, 20XX", "Después de un tiempo...", "CAYÓ EL ESQUELETO MÁS GENIAL;DEL MUNDO!"])

[node name="Intro1" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(950, 540.5)
scale = Vector2(1.30493, 1.37866)
texture = ExtResource("1_5n4p3")

[node name="Intro2" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(950, 543.5)
scale = Vector2(1.30201, 1.36042)
texture = ExtResource("2_pjhl5")

[node name="Intro3" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(950, 542.5)
scale = Vector2(1.30056, 1.35331)
texture = ExtResource("4_ak5dc")

[node name="Intro4" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(950, 542.5)
scale = Vector2(1.28904, 1.37895)
texture = ExtResource("5_io7a5")

[node name="Intro5" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(950, 540.5)
scale = Vector2(1.30493, 1.37866)
texture = ExtResource("1_5n4p3")

[node name="Intro6" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(950, 543)
scale = Vector2(2.56954, 2.53488)
texture = ExtResource("6_7rieg")

[node name="Timer" type="Timer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 933.0
offset_right = 1975.0
offset_bottom = 1355.0
theme_override_fonts/normal_font = ExtResource("3_mojgm")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Textazo"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 8
layout_mode = 0
offset_left = -99.0
offset_top = 135.0
offset_right = 2173.0
offset_bottom = 1323.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hwp1a")
autoplay = true
max_distance = 1e+14
